[gd_scene load_steps=4 format=2]

[ext_resource path="res://waiting_room/Generic_Home_1_preview_48x48.png" type="Texture" id=1]
[ext_resource path="res://waiting_room/waiting_room.gd" type="Script" id=2]
[ext_resource path="res://network_setup/Base_font.tres" type="DynamicFont" id=3]

[node name="waiting_room" type="Node2D"]
script = ExtResource( 2 )

[node name="generic_home_1_preview_48_x_48" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 931.5, 625.5 )
scale = Vector2( 2.75744, 2.15732 )
texture = ExtResource( 1 )

[node name="spawn_location_group" type="Node" parent="."]
unique_name_in_owner = true

[node name="0" type="Position2D" parent="spawn_location_group"]
position = Vector2( 992, 484 )

[node name="player_group" type="YSort" parent="."]
unique_name_in_owner = true

[node name="canvas_layer" type="CanvasLayer" parent="."]

[node name="item_list" type="ItemList" parent="canvas_layer"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1330.0
margin_top = 10.0

[node name="start_button" type="Button" parent="canvas_layer"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 715.0
margin_top = 858.0
margin_right = 1199.0
margin_bottom = 968.0
text = "เริ่มเกม"

[node name="ip_address_label" type="Label" parent="canvas_layer"]
unique_name_in_owner = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0
margin_right = 0.00012207
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1

[node name="exit_button" type="Button" parent="canvas_layer"]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 16.0
margin_top = 5.0
margin_right = 448.0
margin_bottom = 115.0
text = "ออกจากห้อง"

[node name="ready_button" type="Button" parent="canvas_layer"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -110.0
margin_right = 203.0
toggle_mode = true
text = "พร้อม"

[connection signal="pressed" from="canvas_layer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="canvas_layer/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="toggled" from="canvas_layer/ready_button" to="." method="_on_ready_button_toggled"]
